--- a/Software/Solarregler/MDK-ARM/Solarregler/Solarregler.build_log.htm
+++ b/Software/Solarregler/MDK-ARM/Solarregler/Solarregler.build_log.htm
@@ -5,7 +5,7 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.22.0.0
 Copyright (C) 2016 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: alex Microsoft, Microsoft, LIC=----
+License Information: Al Preb, student, LIC=----
  
 Tool Versions:
 Toolchain:       MDK-Lite  Version: 5.22
@@ -21,7 +21,7 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.18.0
 Dialog DLL:      TCM.DLL V1.21.0.0
  
 <h2>Project:</h2>
-C:\Users\user\Desktop\UNI\VMCB\Solarregler\MDK-ARM\Solarregler.uvprojx
+C:\Users\Alex\Desktop\Solarregler\MDK-ARM\Solarregler.uvprojx
 Project File Date:  12/04/2018
 
 <h2>Output:</h2>
@@ -35,26 +35,26 @@ compiling MAX31865.c...
 compiling main.c...
 ../Inc/MAX31865.h(39): warning:  #1-D: last line of file ends without a newline
   #endif
-../Src/main.c(142): warning:  #188-D: enumerated type mixed with another type
-        HAL_GPIO_WritePin(
+../Src/main.c(141): warning:  #188-D: enumerated type mixed with another type
+  	HAL_GPIO_WritePin(
 PIOB, (0x1 << 12), 1);
 ../Src/main.c: 2 warnings, 0 errors
 compiling stm32f1xx_it.c...
 ../Inc/MAX31865.h(39): warning:  #1-D: last line of file ends without a newline
   #endif
 ../Src/stm32f1xx_it.c: 1 warning, 0 errors
-compiling stm32f1xx_hal_msp.c...
 compiling stm32f1xx_hal_gpio_ex.c...
+compiling stm32f1xx_hal_msp.c...
 compiling stm32f1xx_hal_can.c...
-compiling stm32f1xx_hal_i2c.c...
 compiling stm32f1xx_hal_spi.c...
 compiling stm32f1xx_hal_spi_ex.c...
-compiling stm32f1xx_hal_tim.c...
+compiling stm32f1xx_hal_i2c.c...
 compiling stm32f1xx_hal_tim_ex.c...
 compiling stm32f1xx_hal_uart.c...
+compiling stm32f1xx_hal_tim.c...
 compiling stm32f1xx_hal.c...
-compiling stm32f1xx_hal_rcc.c...
 compiling stm32f1xx_hal_rcc_ex.c...
+compiling stm32f1xx_hal_rcc.c...
 compiling stm32f1xx_hal_gpio.c...
 compiling stm32f1xx_hal_dma.c...
 compiling stm32f1xx_hal_cortex.c...
@@ -63,7 +63,7 @@ compiling stm32f1xx_hal_flash.c...
 compiling stm32f1xx_hal_flash_ex.c...
 compiling system_stm32f1xx.c...
 linking...
-Program Size: Code=9388 RO-data=292 RW-data=52 ZI-data=1348  
+Program Size: Code=10360 RO-data=292 RW-data=36 ZI-data=1348  
 FromELF: creating hex file...
 "Solarregler\Solarregler.axf" - 0 Error(s), 4 Warning(s).
 
@@ -76,14 +76,14 @@ Package Vendor: ARM
    * Component: CORE Version: 5.0.0
 
 <h2>Collection of Component include folders:</h2>
-  C:\Users\user\Desktop\UNI\VMCB\Solarregler\MDK-ARM\RTE\_Solarregler
+  C:\Users\Alex\Desktop\Solarregler\MDK-ARM\RTE\_Solarregler
   C:\Keil_v5\ARM\PACK\ARM\CMSIS\5.0.0\CMSIS\Include
-  C:\Keil_v5\ARM\PACK\Keil\STM32F1xx_DFP\2.2.0\Device\Include
+  C:\Keil_v5\ARM\PACK\Keil\STM32F1xx_DFP\2.1.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.0.0
-Build Time Elapsed:  00:00:56
+Build Time Elapsed:  00:00:22
 </pre>
 </body>
 </html>
