--- a/Software/Solarregler/MDK-ARM/Solarregler/Solarregler.build_log.htm
+++ b/Software/Solarregler/MDK-ARM/Solarregler/Solarregler.build_log.htm
@@ -21,8 +21,8 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.18.0
 Dialog DLL:      TCM.DLL V1.21.0.0
  
 <h2>Project:</h2>
-C:\Users\Alex\Desktop\Solarregler\MDK-ARM\Solarregler.uvprojx
-Project File Date:  12/04/2018
+C:\Users\Alex\Documents\GitHub\VMCB\Software\Solarregler\MDK-ARM\Solarregler.uvprojx
+Project File Date:  12/06/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 4 (build 422)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
@@ -35,23 +35,24 @@ compiling MAX31865.c...
 compiling main.c...
 ../Inc/MAX31865.h(39): warning:  #1-D: last line of file ends without a newline
   #endif
-../Src/main.c(141): warning:  #188-D: enumerated type mixed with another type
-  	HAL_GPIO_WritePin(
-PIOB, (0x1 << 12), 1);
-../Src/main.c: 2 warnings, 0 errors
+../Src/main.c: 1 warning, 0 errors
 compiling stm32f1xx_it.c...
 ../Inc/MAX31865.h(39): warning:  #1-D: last line of file ends without a newline
   #endif
-../Src/stm32f1xx_it.c: 1 warning, 0 errors
-compiling stm32f1xx_hal_gpio_ex.c...
+../Src/stm32f1xx_it.c(293): warning:  #188-D: enumerated type mixed with another type
+  		HAL_GPIO_WritePin(
+../Src/stm32f1xx_it.c(297): warning:  #188-D: enumerated type mixed with another type
+  		HAL_GPIO_WritePin(
+../Src/stm32f1xx_it.c: 3 warnings, 0 errors
 compiling stm32f1xx_hal_msp.c...
+compiling stm32f1xx_hal_gpio_ex.c...
 compiling stm32f1xx_hal_can.c...
-compiling stm32f1xx_hal_spi.c...
 compiling stm32f1xx_hal_spi_ex.c...
+compiling stm32f1xx_hal_spi.c...
 compiling stm32f1xx_hal_i2c.c...
 compiling stm32f1xx_hal_tim_ex.c...
-compiling stm32f1xx_hal_uart.c...
 compiling stm32f1xx_hal_tim.c...
+compiling stm32f1xx_hal_uart.c...
 compiling stm32f1xx_hal.c...
 compiling stm32f1xx_hal_rcc_ex.c...
 compiling stm32f1xx_hal_rcc.c...
@@ -63,9 +64,9 @@ compiling stm32f1xx_hal_flash.c...
 compiling stm32f1xx_hal_flash_ex.c...
 compiling system_stm32f1xx.c...
 linking...
-Program Size: Code=10360 RO-data=292 RW-data=36 ZI-data=1348  
+Program Size: Code=13596 RO-data=364 RW-data=52 ZI-data=1484  
 FromELF: creating hex file...
-"Solarregler\Solarregler.axf" - 0 Error(s), 4 Warning(s).
+"Solarregler\Solarregler.axf" - 0 Error(s), 5 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -76,14 +77,14 @@ Package Vendor: ARM
    * Component: CORE Version: 5.0.0
 
 <h2>Collection of Component include folders:</h2>
-  C:\Users\Alex\Desktop\Solarregler\MDK-ARM\RTE\_Solarregler
+  C:\Users\Alex\Documents\GitHub\VMCB\Software\Solarregler\MDK-ARM\RTE\_Solarregler
   C:\Keil_v5\ARM\PACK\ARM\CMSIS\5.0.0\CMSIS\Include
   C:\Keil_v5\ARM\PACK\Keil\STM32F1xx_DFP\2.1.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.0.0
-Build Time Elapsed:  00:00:22
+Build Time Elapsed:  00:00:16
 </pre>
 </body>
 </html>
