RTC, Can und mehr

--- a/Software/Solarregler/MDK-ARM/Solarregler/Solarregler.build_log.htm
+++ b/Software/Solarregler/MDK-ARM/Solarregler/Solarregler.build_log.htm
@@ -39,17 +39,33 @@ compiling main.c...
 compiling stm32f1xx_it.c...
 ../Inc/MAX31865.h(59): warning:  #1-D: last line of file ends without a newline
   #endif
-../Src/stm32f1xx_it.c(307): warning:  #188-D: enumerated type mixed with another type
+../Src/stm32f1xx_it.c(340): warning:  #188-D: enumerated type mixed with another type
                         HAL_GPIO_WritePin(
-../Src/stm32f1xx_it.c(310): warning:  #188-D: enumerated type mixed with another type
+../Src/stm32f1xx_it.c(343): warning:  #188-D: enumerated type mixed with another type
                         HAL_GPIO_WritePin(
-../Src/stm32f1xx_it.c(316): warning:  #188-D: enumerated type mixed with another type
+../Src/stm32f1xx_it.c(349): warning:  #188-D: enumerated type mixed with another type
                         HAL_GPIO_WritePin(
-../Src/stm32f1xx_it.c(319): warning:  #188-D: enumerated type mixed with another type
+../Src/stm32f1xx_it.c(352): warning:  #188-D: enumerated type mixed with another type
                         HAL_GPIO_WritePin(
-../Src/stm32f1xx_it.c(324): warning:  #188-D: enumerated type mixed with another type
+../Src/stm32f1xx_it.c(361): warning:  #188-D: enumerated type mixed with another type
+                        HAL_GPIO_WritePin(
+../Src/stm32f1xx_it.c(364): warning:  #188-D: enumerated type mixed with another type
+                        HAL_GPIO_WritePin(
+../Src/stm32f1xx_it.c(370): warning:  #188-D: enumerated type mixed with another type
+                        HAL_GPIO_WritePin(
+../Src/stm32f1xx_it.c(373): warning:  #188-D: enumerated type mixed with another type
+                        HAL_GPIO_WritePin(
+../Src/stm32f1xx_it.c(381): warning:  #188-D: enumerated type mixed with another type
+                        HAL_GPIO_WritePin(
+../Src/stm32f1xx_it.c(384): warning:  #188-D: enumerated type mixed with another type
+                        HAL_GPIO_WritePin(
+../Src/stm32f1xx_it.c(390): warning:  #188-D: enumerated type mixed with another type
+                        HAL_GPIO_WritePin(
+../Src/stm32f1xx_it.c(393): warning:  #188-D: enumerated type mixed with another type
+                        HAL_GPIO_WritePin(
+../Src/stm32f1xx_it.c(401): warning:  #188-D: enumerated type mixed with another type
         HAL_GPIO_WritePin(
-../Src/stm32f1xx_it.c: 6 warnings, 0 errors
+../Src/stm32f1xx_it.c: 14 warnings, 0 errors
 compiling stm32f1xx_hal_msp.c...
 compiling stm32f1xx_hal_gpio_ex.c...
 compiling stm32f1xx_hal_can.c...
@@ -72,9 +88,9 @@ compiling stm32f1xx_hal_flash.c...
 compiling stm32f1xx_hal_flash_ex.c...
 compiling system_stm32f1xx.c...
 linking...
-Program Size: Code=14150 RO-data=294 RW-data=52 ZI-data=1516  
+Program Size: Code=15130 RO-data=294 RW-data=68 ZI-data=1556  
 FromELF: creating hex file...
-"Solarregler\Solarregler.axf" - 0 Error(s), 8 Warning(s).
+"Solarregler\Solarregler.axf" - 0 Error(s), 16 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -92,7 +108,7 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.0.0
-Build Time Elapsed:  00:01:06
+Build Time Elapsed:  00:01:20
 </pre>
 </body>
 </html>
